--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,6 +63,42 @@
 }
 
 .section-4 .rightside {
-    background: purple;
+    background: #FF3366;
+    background: url(../img/login.gif) no-repeat center center;   
 }
 
+.section-4 p {
+    white-space: pre;
+    word-spacing: 0.2em;
+    line-height: 1.5em;
+    text-align: justify;
+    
+}
+
+.section-5 p {
+    white-space: pre;
+    word-spacing: 0.2em;
+    line-height: 1.5em;
+    text-align: justify;
+    
+}
+
+.section-5 .leftside {
+    background: #FF3366;
+    background: url(../img/regels.jpg) no-repeat center center;   
+}
+
+.section-6 .rightside {
+    background: #FF3366;
+    background: url(../img/do.gif) no-repeat center center;   
+}
+
+.section-7 .leftside {
+    background: #FF3366;
+    background: url(../img/drawing.png) no-repeat center center;   
+}
+
+.section-8 .rightside {
+    background: #FF3366;
+    background: url(../img/code.jpg) no-repeat center center;   
+}
