--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,25 +61,21 @@
 }
 
 .centered {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%)
+   padding: 60px;
 }
 
 .section p {
-    white-space: pre;
-    word-spacing: 0.2em;
-    line-height: 1.5em;
-    text-align: justify;
+    font-size: 17px;
+    word-spacing: 0.3em;
+    line-height: 1.7em;
     display: inline-block;
 }
 
 .section h2 {
-    text-align: center;
-    margin-top: 20px;
+    font-size: 28px;
+    margin-bottom: 15px;
 }
+
 
 .section-4 .leftside {
     position: relative;
