--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,10 @@
     color: #FF3366 !important;
 }
 
+.navbar {
+    box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.495);
+}
+
 .header {
     background:
         linear-gradient(rgba(245, 245, 245, 0.7),
