--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,9 @@
     box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.495);
     background-color: var(--grey);
 }
+.navbar li {
+    list-style: none;
+}
 
 .header {
     background: url(../img/header.jpg) no-repeat center;
