--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,12 +20,20 @@
 } */
 
 .header {
-  background: url(../img/header.jpg) no-repeat center;
+  background: -webkit-linear-gradient(to bottom right, rgba(114, 146, 166, 0.7) 0%, rgba(161, 185, 187, 0.7) 100%), url(../img/header.jpg);
+  background: linear-gradient(to bottom right, rgba(114, 146, 166, 0.7) 0%, rgba(161, 185, 187, 0.7) 100%), url(../img/header.jpg);
+  letter-spacing: 5px;
   background-size: cover;
   height: 100vh;
   width: 100%;
   display: table;
   padding: 0;
+}
+
+.header h1 {
+  color: white;
+  font-weight: 900;
+  font-size: 75px;
 }
 
 .image-1 {
@@ -60,7 +68,7 @@
 }
 
 ._background {
-    padding: 20px 0 75px 0;
+  padding: 20px 0 75px 0;
 }
 
 .grey {
@@ -106,7 +114,7 @@
   position: fixed;
   top: 3.5rem;
   right: 3.5rem;
-  background-image: radial-gradient( rgba(114, 146, 166, 1) 0%, rgba(161, 185, 187, 1) 100%);
+  background-image: radial-gradient(rgba(114, 146, 166, 1) 0%, rgba(161, 185, 187, 1) 100%);
   z-index: 1000;
   transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
 }
